feat(17/1): upload LAB2Q2

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /Q3/nbproject/private/
 /Q1-LAB1/nbproject/private/
 /LAB2Q1/nbproject/private/
+/LAB2Q1/build/
+/LAB2Q2/nbproject/private/
+/LAB2Q2/build/
