feat(18/1): change path src LAB2Q2

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /LAB2Q1/build/
 /LAB2Q2/nbproject/private/
 /LAB2Q2/build/
+/LAB2Q3/nbproject/private/
+/LAB2Q3/build/
+/LAB2Q4/nbproject/private/
+/LAB2Q4/build/
