feat(9/2): update LAB4Q2

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 /Recursion/LAB3/nbproject/private/
 /Recursion/LAB3/build/
 /Tree/LAB4Q1/nbproject/private/
+/Tree/LAB4Q1/build/
+/Tree/LAB4Q2/nbproject/private/
+/Tree/LAB4Q2/build/
