--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 /Graph/LAB5/nbproject/private/
 /Sorting/LAB6/nbproject/private/
 /Sorting/LAB6/build/
+/Hashing/LAB7/nbproject/private/
+/Hashing/LAB7/build/
