feat(Exam1, Exam2, Exam3, Exam4, Exam5): Add Assignment2 folder

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,20 @@
 /Hashing/LAB7/nbproject/private/
 /Hashing/LAB7/build/
 /Assignment2/Exam5/CSD201_CQ16.5/nbproject/private/
+/Assignment1/Exam1/CSD201_CQ81/build/
+/Assignment1/Exam1/CSD201_CQ81/dist/
+/Assignment1/Exam1/CSD201_CQ81/nbproject/private/
+/Assignment1/Exam2/CSD201_CQ82/build/
+/Assignment1/Exam2/CSD201_CQ82/dist/
+/Assignment1/Exam2/CSD201_CQ82/nbproject/private/
+/Assignment1/Exam3/CSD201_CQ83/build/
+/Assignment1/Exam3/CSD201_CQ83/dist/
+/Assignment1/Exam3/CSD201_CQ83/nbproject/private/
+/Assignment1/Exam4/CSD201_CQ84/build/
+/Assignment1/Exam4/CSD201_CQ84/dist/
+/Assignment1/Exam4/CSD201_CQ84/nbproject/private/
+/Assignment1/Exam5/CSD201_CQ85/build/
+/Assignment1/Exam5/CSD201_CQ85/dist/
+/Assignment1/Exam5/CSD201_CQ85/nbproject/private/
+/SE193721_Quan_02/Q2/build/
+/SE193721_Quan_02/Q2/nbproject/private/
