feat(LAB8): change folder LAB8_Q1 to LAB8

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@
 /Assignment1/Exam5/CSD201_CQ85/nbproject/private/
 /SE193721_Quan_02/Q2/build/
 /SE193721_Quan_02/Q2/nbproject/private/
+/Test Processing/LAB8/nbproject/private/
