feat(HuffmanCoding): implement question 1.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@
 /SE193721_Quan_02/Q2/build/
 /SE193721_Quan_02/Q2/nbproject/private/
 /Test Processing/LAB8/nbproject/private/
+/Test Processing/LAB8/build/
